Revision history for Perl extension SDL_perl.

* 2.524
	- Fix for t/mixer_channels.t.bak 

* 2.523 
	- Cleaned up how O_OBJECTs are free'd [FROGGS]
	- SDLx::Surface now DESTROYs the SDL::Surface saving memory [kthakore]
	- Fixed Icon value for the SDLx::App constructor useage [kthakore]
	- Added short circuit for varying SDL_Mixer versions for SDLx::Sound [kthakore]

* 2.522
	- Fixed mistakes in inc/My/Builder/Darwin.pm [FROGGS]

* 2.521
	- Fixed manifest (missing src/SDLx/Validate.h) [FROGGS]
	- Updated Alien::SDL's version to 1.421 [FROGGS]

* 2.520
	- Moved SDLx::Validate to XS
	- Moved SDLx::Surface (blit, draw_rect) to XS
	- Created SDLx::Text [garu]
	- Added exit_on_quit feature for SDLx::App
	- Added antialias flag for SDLx::Surface::draw_circle
	- Fixed test plan errors on sdlx_sprite* and sdlx_sfont
	- Darwin: setting arch to systems arch for gcc [FROGGS]

* 2.519
	- Removed build option -fPIC for windows [FROGGS]
	- Throw a warning for missing thread support instead of compile these funtions [FROGGS]
	- SDLx::Surface has alias for w,h [kthakore]
	- SDLx::Surface can use array color format for pixels
	- SDLx::Text added [garu]
	- SDLx::App->new() has exit on quit option 

* 2.518
	- Major refactor of SDLx::Controller [Blaizer]
	- Refactor SDLx::Surface code [Blaizer]

* 2.517
	- Gave SDL::Mixer::Init same signature for varying versions of SDL_Mixer [kthakore]
	- Fix for 2 tests: interface, layermanager

* 2.516
	- Fix for test plan in t/sdlx_sound [FROGGS]

* 2.515
	- Added preliminary SDLx::Sound [rflipo] 
	- Added preliminary SDLx::TTF [kthakore]

* 2.514
	- Made SDLx::Controller::Interface [kthakore]
	- Fixed unsigned int bug for get_pixels from surface [kthakore]
	- Several document fixes 
	- Minor additions to SDLx::Sprite::Animated [jtpalmer]
	- Using only bmp for that sprite test [jtpalmer]
	- Added a fix for writing key_sym for a SDL::Event [kthakore]

* 2.512
	- More tests and implemented more of SDLx::Sprite::Animated [jtpalmer]