@@ -28,7 +28,7 @@ name: SDL
 provides:
   SDL:
     file: lib/SDL.pm
-    version: 2.524_1
+    version: 2.524
   SDL::Audio:
     file: lib/SDL/Audio.pm
   SDL::AudioCVT:
@@ -189,4 +189,4 @@ resources:
   bugtracker: http://sdlperl.ath.cx/projects/SDLPerl
   license: http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
   repository: http://github.com/PerlGameDev/SDL
-version: 2.524_1
+version: 2.524
