@@ -62,6 +62,10 @@ sub run {
 	my $dt           = $_dt{ refaddr $self};
 	my $min_t        = $_min_t{ refaddr $self};
 	my $t            = 0.0;
+
+	#Allows us to do stop and run 
+	$_stop{ refaddr $self} = 0;	
+
 	$_current_time{ refaddr $self} = Time::HiRes::time;
 	while ( !$_stop{ refaddr $self} ) {
 		$self->_event;
