@@ -2,6 +2,8 @@ Revision history for Perl extension SDL_perl.
 
 * 2.524
 	- Fix for t/mixer_channels.t.bak 
+	- Allow SDLx::App to be restarted after it has been stoped
+	- FROGGS cleaned up some memory stuff for AudioSpec
 
 * 2.523 
 	- Cleaned up how O_OBJECTs are free'd [FROGGS]
